--- a/src/index.htm
+++ b/src/index.htm
@@ -22,6 +22,11 @@
     
     <ul id="listUnhealthy">
     </ul>
+    <div id="newItemContainer">
+      <label for="newItemInput">Add Item</label>
+      <input type="text" name="newItemInput" id="newItemInput">
+      <div id="newItemAdd">Add Item</div>
+    </div>
   </div>
   
   <script src="bundle.js"></script>
